--- a/definition2/definition2.vcxproj
+++ b/definition2/definition2.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{3ce3de38-a8c1-4f3c-b0a2-8744c9e980b8}</ProjectGuid>
     <RootNamespace>definition2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Circle</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
